--- a/Page-1.html
+++ b/Page-1.html
@@ -28,7 +28,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-3e0c"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
+  <body class="u-body u-overlap u-overlap-transparent"><header class="u-clearfix u-header u-header" id="sec-3e0c"><div class="u-clearfix u-sheet u-sheet-1"></div></header>
     <section class="u-align-center u-clearfix u-gradient u-section-1" src="" id="sec-6605">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-body-alt-color u-text-default u-title u-text-1">YeaToast</h1>
